# stupid_ec

./: Cargo.toml  README.md
src/: double_and_add.rs  ec.rs  factorization.rs  field_new_impl.rs  fields.rs  gcd.rs  lib.rs  poly.rs  preconditions.rs  primes.rs
src/fields/: mod.rs  primefields.rs
src/num/: fixed.rs  mod.rs
src/num/ops/: generic.rs  mod.rs
src/rings/: integers_mod_ring.rs  mod.rs
