[package]
name = "stupid_ec"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
num = { version = "0.4", features = [ "rand" ] }
ff = { version = "0.11", features = ["derive"] }